; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_lwp_threads.c___lwp_thread_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_lwp_threads.c___lwp_thread_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32, i32, i32, i64, i64, i32, i32, i32, i32, i32, i32, i32, i8* }

@CPU_MINIMUM_STACK_SIZE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@LWP_THREADQ_MODEFIFO = common dso_local global i32 0, align 4
@LWP_STATES_WAITING_FOR_JOINATEXIT = common dso_local global i32 0, align 4
@LWP_CPU_BUDGET_ALGO_NONE = common dso_local global i32 0, align 4
@LWP_CPU_BUDGET_ALGO_TIMESLICE = common dso_local global i32 0, align 4
@LWP_STATES_DORMANT = common dso_local global i32 0, align 4
@_lwp_ticks_per_timeslice = common dso_local global i32 0, align 4
@_thr_executing = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__lwp_thread_init(%struct.TYPE_7__* %0, i8* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_7__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 0, i32* %14, align 4
  %15 = load i8*, i8** %9, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %36, label %17

17:                                               ; preds = %6
  %18 = load i32, i32* %10, align 4
  %19 = call i32 @__lwp_stack_isenough(i32 %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %23, label %21

21:                                               ; preds = %17
  %22 = load i32, i32* @CPU_MINIMUM_STACK_SIZE, align 4
  store i32 %22, i32* %14, align 4
  br label %25

23:                                               ; preds = %17
  %24 = load i32, i32* %10, align 4
  store i32 %24, i32* %14, align 4
  br label %25

25:                                               ; preds = %23, %21
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %27 = load i32, i32* %14, align 4
  %28 = call i32 @__lwp_stack_allocate(%struct.TYPE_7__* %26, i32 %27)
  store i32 %28, i32* %14, align 4
  %29 = load i32, i32* %14, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %32, label %31

31:                                               ; preds = %25
  store i32 0, i32* %7, align 4
  br label %94

32:                                               ; preds = %25
  %33 = load i32, i32* @TRUE, align 4
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %35 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %34, i32 0, i32 12
  store i32 %33, i32* %35, align 8
  br label %44

36:                                               ; preds = %6
  %37 = load i8*, i8** %9, align 8
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %39 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %38, i32 0, i32 13
  store i8* %37, i8** %39, align 8
  %40 = load i32, i32* %10, align 4
  store i32 %40, i32* %14, align 4
  %41 = load i32, i32* @FALSE, align 4
  %42 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %43 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %42, i32 0, i32 12
  store i32 %41, i32* %43, align 8
  br label %44

44:                                               ; preds = %36, %32
  %45 = load i32, i32* %14, align 4
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %47 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %46, i32 0, i32 0
  store i32 %45, i32* %47, align 8
  %48 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %49 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %48, i32 0, i32 11
  %50 = load i32, i32* @LWP_THREADQ_MODEFIFO, align 4
  %51 = load i32, i32* @LWP_STATES_WAITING_FOR_JOINATEXIT, align 4
  %52 = call i32 @__lwp_threadqueue_init(i32* %49, i32 %50, i32 %51, i32 0)
  %53 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %54 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %53, i32 0, i32 10
  %55 = call i32 @memset(i32* %54, i32 0, i32 4)
  %56 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %57 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %56, i32 0, i32 9
  %58 = call i32 @memset(i32* %57, i32 0, i32 4)
  %59 = load i32, i32* %11, align 4
  %60 = icmp slt i32 %59, 128
  br i1 %60, label %61, label %63

61:                                               ; preds = %44
  %62 = load i32, i32* @LWP_CPU_BUDGET_ALGO_NONE, align 4
  br label %65

63:                                               ; preds = %44
  %64 = load i32, i32* @LWP_CPU_BUDGET_ALGO_TIMESLICE, align 4
  br label %65

65:                                               ; preds = %63, %61
  %66 = phi i32 [ %62, %61 ], [ %64, %63 ]
  %67 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %68 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %67, i32 0, i32 8
  store i32 %66, i32* %68, align 8
  %69 = load i32, i32* %13, align 4
  %70 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %71 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %70, i32 0, i32 1
  store i32 %69, i32* %71, align 4
  %72 = load i32, i32* %12, align 4
  %73 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %74 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %73, i32 0, i32 2
  store i32 %72, i32* %74, align 8
  %75 = load i32, i32* %11, align 4
  %76 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %77 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %76, i32 0, i32 3
  store i32 %75, i32* %77, align 4
  %78 = load i32, i32* @LWP_STATES_DORMANT, align 4
  %79 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %80 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %79, i32 0, i32 7
  store i32 %78, i32* %80, align 4
  %81 = load i32, i32* @_lwp_ticks_per_timeslice, align 4
  %82 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %83 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %82, i32 0, i32 6
  store i32 %81, i32* %83, align 8
  %84 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %85 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %84, i32 0, i32 5
  store i64 0, i64* %85, align 8
  %86 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %87 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %86, i32 0, i32 4
  store i64 0, i64* %87, align 8
  %88 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %89 = load i32, i32* %11, align 4
  %90 = call i32 @__lwp_thread_setpriority(%struct.TYPE_7__* %88, i32 %89)
  %91 = load i32, i32* @_thr_executing, align 4
  %92 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %93 = call i32 @__libc_create_hook(i32 %91, %struct.TYPE_7__* %92)
  store i32 1, i32* %7, align 4
  br label %94

94:                                               ; preds = %65, %31
  %95 = load i32, i32* %7, align 4
  ret i32 %95
}

declare dso_local i32 @__lwp_stack_isenough(i32) #1

declare dso_local i32 @__lwp_stack_allocate(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @__lwp_threadqueue_init(i32*, i32, i32, i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @__lwp_thread_setpriority(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @__libc_create_hook(i32, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
